//    Copyright 2019 Google Inc.
//
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
//
//        https://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.

syntax = "proto3";

package google.fhir.r4.core;

import "google/protobuf/any.proto";
import "proto/google/fhir/proto/annotations.proto";
import "proto/google/fhir/proto/r4/core/codes.proto";
import "proto/google/fhir/proto/r4/core/datatypes.proto";

option java_multiple_files = true;
option java_package = "com.google.fhir.r4.core";
option (.google.fhir.proto.fhir_version) = R4;

// Auto-generated from StructureDefinition for Medication.
// Definition of a Medication.
// See http://hl7.org/fhir/StructureDefinition/Medication
message Medication {
  option (.google.fhir.proto.structure_definition_kind) = KIND_RESOURCE;
  option (.google.fhir.proto.fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/Medication";
  option (.google.fhir.proto.search_parameter) = {
    name: "code"
    type: TOKEN
    expression: "AllergyIntolerance.code | AllergyIntolerance.reaction.substance | Condition.code | (DeviceRequest.code as CodeableConcept) | DiagnosticReport.code | FamilyMemberHistory.condition.code | List.code | Medication.code | (MedicationAdministration.medication as CodeableConcept) | (MedicationDispense.medication as CodeableConcept) | (MedicationRequest.medication as CodeableConcept) | (MedicationStatement.medication as CodeableConcept) | Observation.code | Procedure.code | ServiceRequest.code"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "expiration-date"
    type: DATE
    expression: "Medication.batch.expirationDate"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "form"
    type: TOKEN
    expression: "Medication.form"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "identifier"
    type: TOKEN
    expression: "Medication.identifier"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "ingredient"
    type: REFERENCE
    expression: "(Medication.ingredient.item as Reference)"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "ingredient-code"
    type: TOKEN
    expression: "(Medication.ingredient.item as CodeableConcept)"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "lot-number"
    type: TOKEN
    expression: "Medication.batch.lotNumber"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "manufacturer"
    type: REFERENCE
    expression: "Medication.manufacturer"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "status"
    type: TOKEN
    expression: "Medication.status"
  };

  // Logical id of this artifact
  Id id = 1;

  // Metadata about the resource
  Meta meta = 2;

  // A set of rules under which this content was created
  Uri implicit_rules = 3;

  // Language of the resource content
  Code language = 4;

  // Text summary of the resource, for human interpretation
  Narrative text = 5;

  // Contained, inline Resources
  repeated protobuf.Any contained = 6;

  // Field 7 reserved for strongly-typed ContainedResource for id:
  // Medication.contained
  reserved 7;

  // Additional content defined by implementations
  repeated Extension extension = 8;

  // Extensions that cannot be ignored
  repeated Extension modifier_extension = 9;

  // Business identifier for this medication
  repeated Identifier identifier = 10;

  // Codes that identify this medication
  CodeableConcept code = 11;

  // active | inactive | entered-in-error
  message StatusCode {
    option (.google.fhir.proto.structure_definition_kind) = KIND_PRIMITIVE_TYPE;
    option (.google.fhir.proto.fhir_valueset_url) =
        "http://hl7.org/fhir/ValueSet/medication-status";
    option (.google.fhir.proto.fhir_profile_base) =
        "http://hl7.org/fhir/StructureDefinition/code";

    MedicationStatusCode.Value value = 1;

    String id = 2;

    repeated Extension extension = 3;
  }
  StatusCode status = 12;

  // Manufacturer of the item
  Reference manufacturer = 13
      [(.google.fhir.proto.valid_reference_type) = "Organization"];

  // powder | tablets | capsule +
  CodeableConcept form = 14;

  // Amount of drug in package
  Ratio amount = 15;

  // Active or inactive ingredient
  message Ingredient {
    // Unique id for inter-element referencing
    String id = 1;

    // Additional content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored even if unrecognized
    repeated Extension modifier_extension = 3;

    // The actual ingredient or content
    message ItemX {
      option (.google.fhir.proto.is_choice_type) = true;

      oneof choice {
        CodeableConcept codeable_concept = 1;
        Reference reference = 2 [
          (.google.fhir.proto.valid_reference_type) = "Substance",
          (.google.fhir.proto.valid_reference_type) = "Medication"
        ];
      }
    }
    ItemX item = 4
        [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

    // Active ingredient indicator
    Boolean is_active = 5;

    // Quantity of ingredient present
    Ratio strength = 6;
  }
  repeated Ingredient ingredient = 16;

  // Details about packaged medications
  message Batch {
    // Unique id for inter-element referencing
    String id = 1;

    // Additional content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored even if unrecognized
    repeated Extension modifier_extension = 3;

    // Identifier assigned to batch
    String lot_number = 4;

    // When batch will expire
    DateTime expiration_date = 5;
  }
  Batch batch = 17;
}
